# an_implementation_of_pra

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: arithmetic.h  arithmetic.tpp  examples.h  examples_eq.h  primitive.h  primitive.tpp  utility.h
src/: examples.cpp  main.cpp  utility.cpp
